<resources>
    <string name="app_name">Free Gift Reward</string>
    <string name="guide_login">Login</string>
    <string name="guide_register">Register</string>
    <string name="txt_account">Account</string>
    <string name="txt_pwd">Password</string>
    <string name="txt_account_hint">Email</string>
    <string name="txt_pwd_hint">Password</string>
    <string name="txt_remember_pwd">remember password</string>
    <string name="txt_retrieve_pwd">retrieve password</string>
    <string name="txt_other_login">Other login</string>
    <string name="pandora">Free Gift Reward</string>
    <string name="head_txt_center">List</string>
    <string name="home_notify">Congratulations Chris for the pro a five minutes ago</string>
    <string name="home_title">All gift list</string>
    <string name="participation">participants</string>
    <string name="txt_me_record">Record</string>
    <string name="txt_me_address">Address</string>
    <string name="txt_me_points">Get Points</string>
    <string name="txt_me_about">About us</string>
    <string name="txt_me_exit">Exit</string>
    <string name="txt_top_edit">Edit</string>
    <string name="txt_top_complete">OK</string>
    <string name="total">A total of</string>
    <string name="items">items</string>
    <string name="total1">Total</string>
    <string name="points">Points</string>
    <string name="input_user">Please Input Email</string>
    <string name="user_used">Email has been registered</string>
    <string name="input_pwd">Please Input Password</string>
    <string name="pwd_errot">Password Error!</string>
    <string name="task_desc">Every app has its own potential value.</string>
    <string name="txt_choice_mode">Select Your Way</string>
    <string name="preparing_card">Preparing SDCard</string>
    <string name="no_storage_card">No Storage SDCard</string>
    <string name="not_enough_space">Not Enough Space</string>
    <string name="clip_tip">Drag the border to adjust</string>
    <string name="dialog_title">title</string>
    <string name="dialog_message">spend points</string>
    <string name="btn_change">Cancel</string>
    <string name="btn_later">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="claim">Claim it</string>
    <string name="input_address">please input address</string>
    <string name="app_id">1675118852736657</string>
    <string name="share">share</string>
    <string name="more">more</string>
</resources>
