<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55000000"
    android:padding="32dp">

    <RelativeLayout
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@mipmap/dialog_background"
        android:padding="24dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dip"
            android:text="@string/dialog_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#3E3E3E" />

        <ScrollView
            android:id="@+id/dialog_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_title"
            android:paddingBottom="30dp"
            android:scrollbarSize="2dp"
            android:scrollbarThumbVertical="@color/thumbColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:id="@+id/dialog_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/dialog_message"
                    android:textColor="#3E3E3E"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_scrollView"
            android:orientation="horizontal">

            <com.android.shopping.widget.ButtonFlat
                android:id="@+id/btn_change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:background="@color/headerBgColor"
                android:text="@string/btn_change" />

            <com.android.shopping.widget.ButtonFlat
                android:id="@+id/btn_later"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/headerBgColor"
                android:text="@string/btn_later"
                android:visibility="gone" />

            <com.android.shopping.widget.ButtonFlat
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/headerBgColor"
                android:text="@string/btn_yes" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>