<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="#EC3132"
        android:minHeight="48dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/pandora"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dip"
            android:layout_toLeftOf="@+id/frgHeaderCredits"
            android:text="My credits"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/frgHeaderCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:text="0"
            android:textColor="#FEB903"
            android:textSize="18sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_header_height">

                <android.support.v4.view.ViewPager
                    android:id="@+id/frg_home_vp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.android.shopping.widget.PageIndicator
                    android:id="@+id/frg_home_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dip"
                    android:animateLayoutChanges="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/frg_home_horn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dip"
                        android:background="@mipmap/ic_horn_0" />

                    <TextView
                        android:id="@+id/frg_home_notify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:padding="10dip"
                        android:singleLine="true"
                        android:text="@string/home_notify"
                        android:textColor="#4C4F5D"
                        android:textSize="13sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10.0dip"
                    android:background="#E9E9F1" />

                <TextView
                    android:id="@+id/frg_home_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_ver"
                    android:drawablePadding="10dip"
                    android:focusable="true"
                    android:gravity="center_vertical|left"
                    android:padding="10dip"
                    android:text="@string/home_title"
                    android:textColor="#3C3E46"
                    android:textSize="17sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.0dip"
                    android:background="@color/line_color"
                    android:paddingBottom="10dip" />

                <com.android.shopping.widget.LineGridView
                    android:id="@+id/frg_home_gv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:listSelector="#00000000"

                    android:numColumns="2" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
